code review fixes remove strict condition about security type and authentication info